# wsi-classification

./: .gitignore  pyproject.toml
config/: config.yaml  preprocessor.yaml  preprocessor_config.yaml
docs/reports/: 01-Baseline-model-comparison-no-scaling.md  01-LogisticRegressionBestModel_report.md  02-Baseline-model-comparison-with-scaling.md  03-Baseline-model-cross-validation.md  04-Baseline-model-grid-search.md  05-Ensemble-model-comparison-to-standard.md  06-Ensemble-model-cross-validation.md  06-Ensemble-model-cross-validation_report.md  07-Ensemble-model-grid-search.md  08-Finding-best-grid-search.md  08-Tuning-Ensemble-grid-search.md  09-Finding-best.md  09-Further-Tuning-grid-search.md  10-Trying-Stacking-grid-search.md  10-Verifying-best.md  11-Repeated-k-fold-best.md  12-Verifying-best-ensemble.md  13-Trying-Stacking.md  14-Verifying-Stacking.md  15-Trying-Smaller-Stacking.md
notebooks/: 1-data-overview.ipynb  1.0-data-overview.ipynb  2-data-preprocessing.ipynb  3-models.ipynb
src/: config_loader.py  experiment_runner.py  main.py  model_orchestrator.py  preprocessor.py  tuner.py
