[project]
name = "projekt1-klasyfikacja"
version = "0.1.0"
description = ""
authors = [
    {name = "Patryk Pol"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "mlflow (>=3.10.1,<4.0.0)",
    "pandas-stubs (>=2.3.3,<2.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
